[tool.poetry]
name = "doco-cli"
version = "2.2.2"
description = ""
keywords = ["docker", "rsync"]
authors = ["Fabian Sandoval Saldias <fabianvss@gmail.com>"]
readme = "README.md"
repository = "https://github.com/bibermann/doco-cli"
license = "GPL-3.0-only"
packages = [{ include = "src" }]

[tool.poetry.scripts]
doco = "src.main:app"

[tool.poetry.dependencies]
python = "^3.9.2"
pydantic = "^2.12.0"
python-dotenv = "^1.1.1"
PyYAML = "^6.0"
rich = "^14.2.0"
typer = {version = "^0.19.2", extras = ["all"]}
tomli = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
bumpver = "^2022.1119"
bump-pydantic = "^0.8.0"

[tool.bumpver]
current_version = "2.2.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/main.py" = ['__version__ = "{version}"']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
